--- a/style.css
+++ b/style.css
@@ -17,3 +17,10 @@ body{
     border: 1px solid black;
     background-color: white;
 }
+
+.buttons{
+    margin: 24px;
+    display: flex;
+    justify-content: space-around;
+    width: 960px;
+}
