--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body{
-    background-color: red;
+    background-color: rgb(202, 197, 197);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 h1{
-    margin-bottom: 70px;
+    margin-bottom: 20px;
+    color: rgb(100,100,100);
+    font-size: 50px;
 }
 
 .grid-container{
@@ -27,4 +29,15 @@ h1{
     display: flex;
     justify-content: space-around;
     width: 960px;
+}
+
+button{
+    background-color: rgb(202, 197, 197);
+    border: none;
+    color: rgb(100,100,100);
+    font-size: 20px;
+}
+
+button:hover{
+    color: rgb(125,125,125)
 }
