--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(202, 197, 197);
     display: flex;
     flex-direction: column;
@@ -8,7 +9,8 @@ body{
 h1{
     margin-bottom: 20px;
     color: rgb(100,100,100);
-    font-size: 50px;
+    font-size: 40px;
+    font-weight: bolder;
 }
 
 .grid-container{
@@ -36,6 +38,7 @@ button{
     border: none;
     color: rgb(100,100,100);
     font-size: 20px;
+    font-weight: 600;
 }
 
 button:hover{
